# SSE-Fiddle

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLEW.cmake  FindSDL2.cmake
include/: mat4.h  vec4.h
src/: CMakeLists.txt  test_gl.c  test_mat4.c  test_vec4.c
